--- a/src/src/errordisplay.module.css
+++ b/src/src/errordisplay.module.css
@@ -5,12 +5,23 @@
   animation: toast-in-right 0.7s;
 }
 
-.errortoast {
+/*.errortoast {
   position: fixed;
   bottom: 1rem;
   z-index: 10000;
   margin-left: 1rem;
   margin-right: 1rem;
   display: block;
+  width: 100%;
+}*/
+
+.errortoast {
+  position: fixed;
+  bottom: 1rem;
+  z-index: 10000;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  display: flex; /* make the toast use flexbox */
+  justify-content: space-between; /* separate the message and close button */
   width: 100%;
 }
